##Text encoding: utf-8

2008-08-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/wikipedia/wikipediatool.cc: removed "unstable" word.
	* programs/calc/gchemcalc.cc: ditto.

2008-08-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gcp-canvas-bpath.h: replaced deprecated GTK_CHECK* macros.
	* libs/canvas/gcp-canvas-group.h: ditto.
	* libs/canvas/gcp-canvas-line.h: ditto.
	* libs/canvas/gcp-canvas-pango.h: ditto.
	* libs/canvas/gcp-canvas-polygon.h: ditto.
	* libs/canvas/gcp-canvas-rect-ellipse.h: ditto.
	* libs/canvas/gcp-canvas-shape.h: ditto.
	* libs/canvas/gcp-canvas-text.h: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcu/gtkchem3dviewer.h: ditto.
	* libs/gcu/gtkcrystalviewer.h: ditto.
	* libs/gcu/gtkperiodic.h: ditto.
	* libs/gcu/gtkspectrumviewer.h: ditto.

2008-08-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/Makefile.am: always create the correct link.

2008-08-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: export missing constant.
	* programs/3d/Makefile.am: restore missing '['.
	* programs/calc/Makefile.am: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/paint/Makefile.am: ditto.
	* programs/spectra/Makefile.am: ditto.
	* programs/table/Makefile.am: ditto.

2008-08-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.90).

2008-08-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* autogen.sh: request /bin/bash.
	* configure.ac: fix various build issues.
	* docs/help/3d/Makefile.am: ditto.
	* docs/help/calc/Makefile.am: ditto.
	* docs/help/crystal/Makefile.am: ditto.
	* docs/help/spectra/Makefile.am: ditto.
	* docs/help/table/Makefile.am: ditto.
	* programs/3d/Makefile.am: ditto.
	* programs/calc/Makefile.am: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/paint/Makefile.am: ditto.
	* programs/spectra/Makefile.am: ditto.
	* programs/table/Makefile.am: ditto.

2008-08-23  Jean Bréfort  <jean.brefort@normalesup.org>